@@ -1,6 +1,8 @@
 v0.3.10
+
 * [BGBUILD-324] Add wildcard to packages schema
 * [BGBUILD-320] Support variable substitution in any string value field of appliance definition
+* [BGBUILD-327] Resolve appliance definition variables in ENV if they are not defined
 
 v0.3.9
 
